# Organizador-de-arquivos_IA_Tauri

./: CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: README.md  glossario.md  roadmap.md  visao.md
docs-ai/: README.md  TEMPLATE.md
docs/arquitetura/: banco-de-dados.md  catalogo-de-eventos.md  configuracao-e-seguranca.md  contratos-tauri.md  esquema-sql.md  (+6 more)
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_marco1_descoberta.sql  0003_marco2_conhecimento.sql  0004_marco3_sugestoes.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: conhecimento.rs  descoberta.rs  mod.rs  sugestoes.rs
src-tauri/src/core/: mod.rs  state.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/repositories/: clusters.rs  embeddings.rs  entities.rs  files.rs  mod.rs  relationships.rs  sugestoes.rs
src-tauri/src/domain/: arquivo.rs  conhecimento.rs  mod.rs  scan.rs  sugestoes.rs
src-tauri/src/events/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/conhecimento/: analise.rs  clusters.rs  embeddings.rs  entidades.rs  mod.rs  relacoes.rs
src-tauri/src/services/ia/: mod.rs
src-tauri/src/services/ia/ollama/: embed.rs  generate.rs  health.rs  mod.rs
src-tauri/src/services/indexacao/: indexing.rs  mod.rs  scan.rs
src-tauri/src/services/indexacao/extratores/: docx.rs  mod.rs  pdf.rs  texto.rs  xlsx.rs
src-tauri/src/services/sugestoes/: motor.rs
src-tauri/tests/: integracao.rs
(+91 files in other folders)
