[package]
name = "organizador-de-arquivos_ia_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "organizador_de_arquivos_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# Marco 1 — extração de conteúdo (ADR-016)
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = { version = "0.24", features = ["dates"] }
sha2 = "0.10"
mime_guess = "2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
# Marco 2 — pipeline de IA (ADR-018 a ADR-022)
ndarray = "0.16"
bytemuck = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"

